# HART

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  README.md
.github/workflows/: doxygen.yml
dependencies/CLI11/: CLI11.hpp
docs/: GettingStarted.md  Overview.md  Requirements.md  Testing Your DSP In Hart.md
docs/doxygen/rose-pine/: rose-pine-awesome-doxygen-overrides.css  rose-pine-vars.css
docs/doxygen/scripts/: StyleGraphs.py  requirements.txt
docs/doxygen/templates/: hart_footer.html  hart_header.html
examples/: example_processors.hpp  example_test_booster.cpp  run_tests.cpp
include/: hart.hpp  hart_ascii_art.hpp  hart_audio_buffer.hpp  hart_cliconfig.hpp  hart_exceptions.hpp  hart_expectation_failure_messages.hpp  hart_matchers.hpp  hart_plot.hpp  hart_precision.hpp  hart_process_audio.hpp  hart_signal.hpp  hart_test_registry.hpp  hart_tested_audio_processor.hpp  hart_units.hpp  hart_utils.hpp  hart_wavformat.hpp  hart_wavwriter.hpp
include/dsp/: hart_dsp.hpp  hart_dsp_all.hpp  hart_gain.hpp  hart_gaindb.hpp  hart_gainlinear.hpp  hart_hardclip.hpp
include/envelopes/: hart_envelope.hpp  hart_envelopes_all.hpp  hart_segmentedenvelope.hpp
include/matchers/: hart_equalsto.hpp  hart_matcher.hpp  hart_matcher_failure_details.hpp  hart_matchers_all.hpp  hart_peaksat.hpp  hart_peaksbelow.hpp
include/signals/: hart_signal.hpp  hart_signals_all.hpp  hart_silence.hpp  hart_sine_sweep.hpp  hart_sinewave.hpp  hart_wavfile.hpp  hart_whitenoise.hpp
src/: hart.cpp
tests/: generate_data.cpp  test_dsp.cpp  test_dsp_chains.cpp  test_envelope.cpp  test_host.cpp  test_main.cpp  test_sine_sweep.cpp
